--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,18 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.VTB_hack" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="imageButtonStyle">@style/ImageButton</item>
     </style>
 
     <style name="Theme.VTB_hack" parent="Base.Theme.VTB_hack" />
+
+    <style name="ImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:scaleType">fitCenter</item>
+
+        <item name="backgroundTint">@color/blue</item>
+        <item name="tint">@color/white</item>
+
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
 </resources>
