--- a/android/app/src/main/res/layout/fragment_input.xml
+++ b/android/app/src/main/res/layout/fragment_input.xml
@@ -7,28 +7,138 @@
     android:background="#FFFFFF"
     android:backgroundTint="#FFFFFF"
     tools:context=".fragments.InputFragment">
+<!--
+    Перевод денежных средств
+    Оплата услуг и коммунальных платежей
+    Поддержка инвалидов
+    Консультирование по инвестированию и управлению финансами
+    Перевыпуск/замена утерянной или поврежденной банковской карты
+    Открытие сейфового хранилища
+    Получение выписок по счету
+    Услуги страхования
+    Открытие счета для бизнеса или предпринимателя
+    Рефинансирование кредита или перевод его в другой банк
+    Размен USD
+    Размен EUR
+    Открытие нового счета/депозита
+    Получение кредита/ипотеки
+    Оформление кредитной карты
 
-    <CheckedTextView
-        android:id="@+id/cbFirst"
-        android:layout_width="wrap_content"
+    -->
+    <LinearLayout
+        android:id="@+id/llCriterias"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="CheckedTextView" />
-
-    <CheckedTextView
-        android:id="@+id/checkedTextView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CheckedTextView" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabSend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:background="#FFFFFF"
-        android:clickable="true"
-        android:src="@android:drawable/ic_menu_send"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="218dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <CheckedTextView
+            android:id="@+id/cb0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/transit" />
+
+        <CheckedTextView
+            android:id="@+id/cb1"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/payment" />
+
+        <CheckedTextView
+            android:id="@+id/cb2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/invalid" />
+
+        <CheckedTextView
+            android:id="@+id/cb3"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/consultation" />
+
+        <CheckedTextView
+            android:id="@+id/cb4"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/reissue" />
+
+        <CheckedTextView
+            android:id="@+id/cb5"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/safe" />
+
+        <CheckedTextView
+            android:id="@+id/cb6"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/account_statement" />
+
+        <CheckedTextView
+            android:id="@+id/cb7"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/Insurance" />
+
+        <CheckedTextView
+            android:id="@+id/cb8"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/business_account" />
+
+        <CheckedTextView
+            android:id="@+id/cb9"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/refinance" />
+
+        <CheckedTextView
+            android:id="@+id/cb10"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/usd" />
+
+        <CheckedTextView
+            android:id="@+id/cb11"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/eur" />
+
+        <CheckedTextView
+            android:id="@+id/cb12"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/new_account" />
+
+        <CheckedTextView
+            android:id="@+id/cb13"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/credit" />
+
+        <CheckedTextView
+            android:id="@+id/cb14"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+            android:text="@string/credit_card" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
