--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.VTB_hack" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/blue</item>
+
+        <item name="floatingActionButtonStyle">@style/FloatActionButton</item>
         <item name="imageButtonStyle">@style/ImageButton</item>
+
+        <item name="android:backgroundTint">@color/dark_gray</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
     <style name="Theme.VTB_hack" parent="Base.Theme.VTB_hack" />
@@ -13,6 +20,11 @@
         <item name="tint">@color/white</item>
 
         <item name="android:layout_margin">10dp</item>
+    </style>
+
+    <style name="FloatActionButton" parent="Widget.Design.FloatingActionButton">
+        <item name="android:backgroundTint">@color/blue</item>
+        <item name="tint">@color/white</item>
     </style>
 
 </resources>
