--- a/android/app/src/main/res/layout/fragment_input.xml
+++ b/android/app/src/main/res/layout/fragment_input.xml
@@ -24,7 +24,9 @@
             android:layout_marginEnd="16dp"
             android:divider="@drawable/divider"
             android:orientation="vertical"
-            android:showDividers="middle">
+            android:showDividers="middle"
+
+            android:paddingBottom="10dp">
 
             <CheckedTextView
                 android:id="@+id/cb0"
