--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
 
         <item name="floatingActionButtonStyle">@style/FloatActionButton</item>
         <item name="imageButtonStyle">@style/ImageButton</item>
+        <item name="materialAlertDialogTitleTextStyle">@style/Base.Theme.VTB_hack</item>
 
         <item name="android:backgroundTint">@color/dark_gray</item>
         <item name="android:textColor">@color/white</item>
