--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -31,21 +31,21 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
 
-            app:srcCompat="@drawable/icons8_walking_50" />
+            app:srcCompat="@drawable/ic_metro" />
 
         <ImageButton
             android:id="@+id/ibMasstransit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/ic_mark" />
+            app:srcCompat="@drawable/icon_base" />
 
         <ImageButton
             android:id="@+id/ibCar"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@drawable/car" />
+            app:srcCompat="@drawable/ic_car" />
 
     </LinearLayout>
 
