--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,11 @@
         android:id="@+id/mvMap"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@drawable/rounded_background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -30,15 +31,16 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-
-            app:srcCompat="@drawable/ic_metro" />
+            app:srcCompat="@drawable/ic_walking" />
 
         <ImageButton
             android:id="@+id/ibMasstransit"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_base" />
+            app:srcCompat="@drawable/ic_subway" />
 
         <ImageButton
             android:id="@+id/ibCar"
